--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "mentoring-infrastructure",
   "version": "1.0.0",
   "description": "Mentoring programm: EPAM Infrastructure",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "./node_modules/.bin/eslint index.js"
+    "lint": "./node_modules/.bin/eslint src/index.js",
+    "plato": "./node_modules/.bin/plato -r -d report src -e .eslintrc -t 'Travic CI with plato for JavaScript'"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^5.16.0",
-    "jest": "^24.8.0"
-  }
+    "jest": "^24.8.0",
+    "plato": "^1.7.0"
+  },
+  "dependencies": {}
 }
